<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/string_common_version_title"
            android:textColor="@color/black"
            android:textSize="@dimen/default_font_size_16" />
    </RelativeLayout>

    <View
        android:id="@+id/viewLine"
        style="@style/ViewStyle_Line1"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginBottom="@dimen/margin_16" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_below="@id/viewLine"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_centerVertical="true"
            android:background="@drawable/circle_content"
            android:layout_width="@dimen/default_icon_size"
            android:layout_height="@dimen/default_icon_size">
            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_system_update_black_24dp"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_toRightOf="@+id/relativeLayout3"
            android:layout_toEndOf="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_font_size_14"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:text="@string/string_common_version_alarm_description1" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/relativeLayout2"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_marginRight="@dimen/margin_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:gravity="center_vertical"
            android:background="@drawable/circle_red">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/warning"
                android:scaleX="0.7"
                android:scaleY="0.7"/>
        </RelativeLayout>

        <TextView
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/relativeLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_font_size_10"
            android:textColor="@color/barcode"
            android:text="@string/string_common_version_alarm_description2"/>

    </RelativeLayout>

    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button1"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin_8"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_view_height"
            android:background="@color/main1"
            android:text="@string/string_common_go_update"
            android:textStyle="bold"
            android:textSize="@dimen/default_font_size_18"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button2"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin_8"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_view_height"
            android:background="@color/font3"
            android:text="@string/string_common_close"
            android:textStyle="bold"
            android:textSize="@dimen/default_font_size_18"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</RelativeLayout>